@@ -4371,6 +4371,61 @@ AT_CHECK([$COMPILE_ONLY prog.cob], [0], [],
 AT_CLEANUP
 
 
+AT_SETUP([dangling LINKAGE items])
+AT_KEYWORDS([misc])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION  DIVISION.
+       PROGRAM-ID.     prog.
+       DATA DIVISION.
+       LINKAGE SECTION.
+      * constants may occur anywhere but don't belong to LINKAGE
+       78 NSIZE VALUE 1.
+      *
+      * two variables in USING
+       77 A PIC X.
+       01 B.
+          03 B1 PIC X.
+          03 B2 PIC 9(NSIZE).
+      * variable not referenced anywhere - no warning
+       77 C PIC X.
+      * variable referenced by its REDEFINE
+       01 D PIC XX.
+       01 filler redefines D.
+          03 D1 PIC X.
+          03 D2 PIC 9(NSIZE).
+      * variable referenced by its second REDEFINE
+       01 E PIC XX.
+       01 filler redefines E.
+          03 Ea1 PIC X.
+          03 Ea2 PIC 9(NSIZE).
+       01 filler redefines E.
+          03 Eb1 PIC X.
+          03 Eb2 PIC 9(NSIZE).
+      * variable referenced by its child
+       01 F.
+          03 F1 PIC X.
+          03 F2 PIC 9(NSIZE).
+      * variable referenced by level 88 (which is actually a child)
+       01 G.
+          03 filler  PIC X.
+             88 g-val  value 'x'.
+       PROCEDURE       DIVISION USING A B.
+           
+           IF D2 OMITTED OR Eb2 OMITTED or F2 OMITTED
+             set g-val to true
+           END-IF
+           .
+])
+AT_CHECK([$COMPILE_ONLY -Wlinkage prog.cob], [0], [],
+[prog.cob:17: warning: LINKAGE item 'D' is not a PROCEDURE USING parameter
+prog.cob:22: warning: LINKAGE item 'E' is not a PROCEDURE USING parameter
+prog.cob:30: warning: LINKAGE item 'F' is not a PROCEDURE USING parameter
+prog.cob:34: warning: LINKAGE item 'G' is not a PROCEDURE USING parameter
+])
+AT_CLEANUP
+
+
 AT_SETUP([ADD / SUBTRACT TABLE])
 AT_KEYWORDS([misc])
 
